Fixed loader not disappearing on mobile

--- a/app/src/scss/pages/index.scss
+++ b/app/src/scss/pages/index.scss
@@ -1,5 +1,5 @@
 #loader {
-    z-index: 2;
+    z-index: 1031;
     transition: opacity ease-out .2s;
     background: #050409;
 }
